added the image for the background

--- a/public/stylesheets/quiz.css
+++ b/public/stylesheets/quiz.css
@@ -8,6 +8,6 @@ body { background-color: #fff; padding: 20px; }
    position:relative;
    overflow:hidden;
    color:#fff;
-   background:#000 url(../images/backgroundimages_1.jpg)  no-repeat 0px 0px ;
+   background:#000 url(../images/backgroundimages_1.png)  no-repeat 0px 0px ;
 }
 
