--- a/public/stylesheets/quiz.css
+++ b/public/stylesheets/quiz.css
@@ -4,7 +4,7 @@ body { background-color: #fff; padding: 20px; }
 
 #rickNmortyQuiz {
    font-family: 'Roboto', sans-serif; font-size: 16px; font-weight: 400;
-   width:650px; height:700px;
+   width:650px; height:740px;
    position:relative;
    overflow:hidden;
    color:#fff;
@@ -31,7 +31,7 @@ body { background-color: #fff; padding: 20px; }
 #rickNmortyQuiz .intro p { margin:0px 0px 40px 0px; }
 
 /*Questions*/
-#rickNmortyQuiz .question {  width: 550px; position: absolute; top: 420px; left:40px; }
+#rickNmortyQuiz .question {  width: 550px; position: absolute; top: 420px; left:660px; }
 #rickNmortyQuiz .question .text { font-size:1.6em; margin: 0px 0px 20px 0px; }
 #rickNmortyQuiz .question .answer {
     display:inline-block; font-size:1.1em; width:225px; border:2px solid rgba(78, 182, 202, 1);
@@ -48,3 +48,14 @@ body { background-color: #fff; padding: 20px; }
 
 #rickNmortyQuiz  .question .answer.selected::after { background-image: url(../images/icon_incorrect.svg); }
 #rickNmortyQuiz  .question .answer.correct::after { background-image: url(../images/icon_correct.svg); }
+
+/* Feedback */
+
+#rickNmortyQuiz  .feedback {
+	color: #efbe5e; margin-top: 10px; transition: opacity 1.5s, margin-top 1.5s; visibility: hidden; opacity: 0;
+}
+
+#rickNmortyQuiz  .feedback .button { margin-top: 5px; }
+#rickNmortyQuiz   .feedback strong { color: #fff; }
+
+#rickNmortyQuiz   .answered .feedback { visibility: visible; opacity: 1; margin-top: 10px; }
