--- a/public/stylesheets/quiz.css
+++ b/public/stylesheets/quiz.css
@@ -26,6 +26,28 @@ body { background-color: #fff; padding: 20px; }
                             padding:5px 15px; border-radius: 6px;
 }
 
+/*Progress bar*/
+#rickNmortyQuiz .progress {
+    width:550px; position: absolute; top:425px; left:40px;
+}
+#rickNmortyQuiz .progress div {
+    position: relative; display: inline-block; width: 30px; height: 30px; 
+    margin-right:30px; border-radius: 50%; background-color: rgba(255,255,255,.2);
+    transition: background-color 1s;
+}
+#rickNmortyQuiz .progress div::after {
+    content:''; display:block; position:absolute; top:-60px; left:-15px;
+    width:65px; height:40px; background: url(../images/ring.svg) no-repeat 0px 0px;
+    transition: opacity 1s, top 1s; opacity: 0;
+}
+
+#rickNmortyQuiz .progress div.on,
+#rickNmortyQuiz .progress div.answered { background-color: #efbe5e; }
+
+#rickNmortyQuiz .progress div.correct::after {top: -5px; opacity: 12; }
+
+
+
 /*Intro*/
 #rickNmortyQuiz  .intro { position:absolute; top:440px; left:660px; width:550px; }
 #rickNmortyQuiz .intro p { margin:0px 0px 40px 0px; }
